k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: three-tier-app
  labels:
    name: three-tier-app
